-Fixed the soft-lock in an attempt to erase the gamesave using the two-player game menu
-Order of episodes lists now alphabetical
-Added the "compat.ini" option to require players to be on the ground to enter warps
-On-screen elements such as HUD and other printing debug information will not shake with in-game happenings
-Added screen fading effects at the world map and levels

Changes for 1.3.5.2
-Fixed the ARM64 building
-Updated the log writer
-Disabled the "Boss Dead" event hook to stop the episode speed-run timer by default, added the compat.ini options to enable and configure it
-Fixed the unexpected Swooper flap sound played after the Swooper has gone far away
-Fixed the vanilla bug: The Swooper has avoided being started to fly when inactive
-Added the compatibility level command line option separated from the speed-run modes (However, the speed-run mode will still override the compativility level)
-Added an option to enable the background game controller input handling
-Portal warps have been allowed to be used for level entrances and level exits (Instant warps kept unsupported to avoid possible compatibility issues)
-Added the cannon pipes that can shoot the player with a given speed
-Added the workaround for custom background2-42 that has non-multiple 4 height (there are several custom sprites with the 3455 invalid height, they must be 3456)
-Fixed an incorrect speed-run timer render at multiplayer mode
-The controller state print has been replaced with a controller drawing to indicate the pressure state of buttons
-Added the opt-in 2x scale down optimization for all textures to reduce the memory usage
-Fixed the confusion when using the modern section auto-scroll settings when an auto-scroll fix was disabled
-License was changed into GPLv3 (see details: https://github.com/Wohlstand/TheXTech/issues/162)
-Enabled the work on the Android TV
-Fixed the game start error after granting the storage permission on Android 9 and lower