@@ -469,7 +469,9 @@ void UpdateNPCs()
                         tempLocation.Height += 64;
                         for(B = 1; B <= numNPCs; B++)
                         {
-                            if(!NPC[B].Active && B != A && NPC[B].Reset[1] && NPC[B].Reset[2])
+                            if(!NPC[B].Active &&
+                              (!NPC[B].Hidden || !g_compatibility.fix_npc_activation_event_loop_bug) &&
+                               B != A && NPC[B].Reset[1] && NPC[B].Reset[2])
                             {
                                 if(CheckCollision(tempLocation, NPC[B].Location))
                                 {
